force-app/main/default/objects/Student__c/fields/Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percentage__c</fullName>
    <description>Overall attendance percentage till latest session</description>
    <inlineHelpText>Auto-calculated attendance percentage. Read-only for students.</inlineHelpText>
    <label>Attendance Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>