force-app/main/default/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Class to which the student belongs</description>
    <inlineHelpText>Select the class in which the student is enrolled.</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>