force-app/main/default/objects/Student__c/fields/Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Roll_No__c</fullName>
    <description>Unique roll number of the student</description>
    <inlineHelpText>Enter the roll number assigned to the student within the class.</inlineHelpText>
    <label>Roll No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>